--- a/pages/homesearch/homesearch.wxml
+++ b/pages/homesearch/homesearch.wxml
@@ -6,6 +6,19 @@
    <input  class="searchinput" type="text" placeholder="请输入搜索内容"  bindinput="inputContent" confirm-type="search" bindconfirm="searchEvent" value="{{searchKey}}" />
    <image  bindtap="clearEvent"  class="clearimg" src="{{showClear}}" mode="scaleToFill" ></image>
  </view>
+  <!-- 搜索结果区域 -->
+  <view class="searchResultArea"  wx:if="{{searchResultArr.length >0}}">
+    <block wx:for="{{searchResultArr}}" wx:key="*this" >
+  <view class="searchResult_top">
+    <text class="result_toptext">{{item.author != '' ? item.author : item.shareUser}}</text>
+    <text  class="result_toptext">{{item.niceDate}}</text>
+  </view>
+  <view class="searchResult_middle">
+  <rich-text bindtap="selectResult" class="searchResult_middle_text" nodes=" {{item.title}}" data-url=" {{item.link}}" data-title="{{item.title}}"></rich-text> 
+</view>
+  <view class="searchResult_bottom">{{item.chapterName}}.{{item.superChapterName}}</view>
+</block>
+ </view>
   <!-- 热门搜索区域 -->
   <view class="hotSearchArea" wx:if="{{hotSearchArr.length > 0 && searchResultArr.length == 0}}">
     <text class="hotSearch_title">热门搜索</text>
@@ -15,4 +28,17 @@
       </block>
     </view>
   </view>
+    <!-- 历史搜索区域 -->
+    <view class="hotSearchArea" wx:if="{{historySearchArr.length > 0 && searchResultArr.length == 0}}">
+      <view class="history_top">
+        <text class="hotSearch_title">历史搜索</text>
+        <text class="hotSearch_title" bindtap="clearHistoryKey">清除</text>
+      </view>
+    <view class="hotSearch_view" >
+      <block wx:for="{{historySearchArr}}" wx:key="*this">
+        <text bindtap="hotitemclick" class="hotSearch_view_item" data-text='{{item}}'>{{item}}</text>
+      </block>
+    </view>
+  </view>
 </view>
+
