--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,7 +3,7 @@
   <!-- 搜索区域 -->
   <view class="search" bindtap="search">
     <image class="search_img" src="../../images/home_search.png" mode="aspectFit"></image>
-    <text  class="search_text">搜索</text>
+    <text class="search_text">搜索</text>
   </view>
   <swiper wx:if="{{banners.length > 0}}" indicator-dots="true" autoplay="true" circular="true" previous-margin="40rpx"
     next-margin="40rpx">
@@ -15,18 +15,18 @@
   </swiper>
   <!-- 置顶文章区域 -->
   <view class="topartical" wx:for="{{topArticalList}}" wx:key="*this">
-    <view class="topartical_toparea">
-      <view class="topartical_toparea_left">
-        <view class="artical_author artical_smallsize">{{item.author}}</view>
-        <view class="artical_fromsite artical_smallsize" wx:if="{{item.tags.length > 0}}">{{item.tags[0].name}}</view>
+      <view class="topartical_toparea">
+        <view class="topartical_toparea_left">
+          <view class="artical_author artical_smallsize">{{item.author}}</view>
+          <view class="artical_fromsite artical_smallsize" wx:if="{{item.tags.length > 0}}">{{item.tags[0].name}}</view>
+        </view>
+        <view class="artical_date artical_smallsize">{{item.niceDate}}</view>
       </view>
-      <view class="artical_date artical_smallsize">{{item.niceDate}}</view>
-    </view>
-    <view class="artical_title"><text>{{item.title}}</text> </view>
-    <view class="topartical_bottomarea artical_smallsize">
-      <view class="topartical_bottomarea_left">置顶</view>
-      <view>{{item.chapterName}}.{{item.superChapterName}}</view>
-    </view>
+      <view class="artical_title" ><text bindtap="itemClick" data-title='{{item.title}}' data-url='{{item.link}}' data-articalId='{{item.id}}'>{{item.title}}</text> </view>
+      <view class="topartical_bottomarea artical_smallsize">
+        <view class="topartical_bottomarea_left">置顶</view>
+        <view>{{item.chapterName}}.{{item.superChapterName}}</view>
+      </view>
   </view>
   <!-- 其他文章区域 -->
   <view class="oherartical"></view>
