--- a/pages/webview/webview.wxml
+++ b/pages/webview/webview.wxml
@@ -1,3 +1,13 @@
 <!--pages/webview/webview.wxml-->
-          <web-view src="{{urlPath}}"></web-view>
-     
+<view>
+<view wx:if="{{showWebview}}">
+<web-view src="{{urlPath}}" binderror="loadHtmlError" bindload="loadHtmlSuccess" bindmessage="loadHtmlMessage"></web-view>
+</view>
+<view wx:elif="{{!showWebview}}">
+  <rich-text nodes="{{nodes}}"></rich-text>
+  <button type="primary" class="common_btn" bindtap="copyEvent">复制链接打开</button>
+  <view class="collection_view">
+    <image bindtap="collectionClick" src="{{!isCollected ? '../../images/collection_nor.png' :'../../images/collection_sel.png'}}" class="collection_img" data-img='{{isCollected}}' data-id="{{item.id}}"></image>
+  </view>
+</view>
+</view>
