--- a/pages/webview/webview.wxss
+++ b/pages/webview/webview.wxss
@@ -1,3 +1,22 @@
 /* pages/webview/webview.wxss */
 
+.common_btn{
+  margin-top: 50rpx;
+}
 
+.collection_view{
+  position: fixed;
+  display: flex;
+  width: 100rpx;
+  height: 100rpx;
+  bottom: 10%;
+  right: 3%;
+  background-color: #07C160;
+  border-radius: 50%;
+
+}
+.collection_img{
+  margin: auto;
+ width: 60rpx;
+ height: 60rpx;
+}
