--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -14,7 +14,7 @@
     </block>
   </swiper>
   <!-- 文章区域 -->
-  <view class="topartical" wx:for="{{topArticalList}}" wx:key="*this"  bindtap="itemClick" data-title='{{item.title}}' data-url='{{item.link}}' data-articalId='{{item.id}}'>
+  <view class="topartical" wx:for="{{topArticalList}}" wx:key="*this">
     
      <!-- 上部分 -->
       <view class="topartical_toparea">
@@ -27,7 +27,7 @@
       <!-- 中部分 -->
       <view  class="centerartical_area">
         <view   wx:if="{{item.envelopePic != ''}}">
-          <image class="centerartical_area_img" src="{{item.envelopePic}}" mode="aspectFit"></image>
+          <image class="centerartical_area_img" src="{{item.envelopePic}}" mode="widthFix"></image>
         </view>
         <view class="artical_title">
           <text bindtap="itemClick" data-title='{{item.title}}' data-url='{{item.link}}' data-articalId='{{item.id}}'>{{item.title}}</text> 
