--- a/pages/collection/index.wxml
+++ b/pages/collection/index.wxml
@@ -1,21 +1,24 @@
 <!--pages/collection/index.wxml-->
 <view>
-  <view class="collection">
-    <block wx:for="{{datas}}" wx:key="*this">
-      <view class="collection_item">
-
-        <view class="collection_top">
-          <text>{{item.author}}</text>
-          <text>{{item.niceDate}}</text>
-        </view>
-        <view class="collection_center">
-          {{item.title}}
-        </view>
-        <view class="collection_bottom">
-          <text>{{item.chapterName}}</text>
-          <image class="collection_bottom_img" src="../../images/collection_sel.png" bindtap="imgClick" src="{{'../../images/collection_sel.png'}}"  data-id="{{item.id}}" data-originId="{{item.originId}}"></image>
-        </view>
+  <view class="collection" wx:for="{{datas}}" wx:key="*this" bindtap="itemClick" 
+   data-url="{{item.link}}" data-articalId="{{item.originId}}" data-title="{{item.title}}">
+    <view class="collection_item">
+      <!-- 上 -->
+      <view class="collection_top">
+        <text>{{item.author != '' ? item.author: '匿名用户'}}</text>
+        <text>{{item.niceDate}}</text>
       </view>
-    </block>
+      <!-- 中 -->
+      <view class="collection_center">
+        {{item.title}}
+      </view>
+      <!-- 下 -->
+      <view class="collection_bottom">
+        <text>{{item.chapterName}}</text>
+        <image class="collection_bottom_img" src="../../images/collection_sel.png" bindtap="imgClick"
+          src="{{'../../images/collection_sel.png'}}" data-id="{{item.id}}" data-originId="{{item.originId}}"></image>
+      </view>
+    </view>
   </view>
 </view>
+
