--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -22,13 +22,26 @@
       <image slot="icon" src="../../images/mine_integral.png"
         style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
     </mp-cell>
-    <mp-cell link hover value="我的分享" data-field="share" bindtap="checkPermission">
-      <image slot="icon" src="../../images/mine_share.png"
-        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
-    </mp-cell>
     <mp-cell link hover value="我的收藏" data-field="collection" bindtap="checkPermission">
       <image slot="icon" src="../../images/mine_collection.png"
         style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
     </mp-cell>
+    <mp-cell link hover value="我的分享" data-field="share" bindtap="checkPermission">
+      <image slot="icon" src="../../images/mine_share.png"
+        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
+    </mp-cell>
+    <mp-cell link hover value="阅读历史" data-field="history" bindtap="checkPermission">
+      <image slot="icon" src="../../images/mine_readinghistory.png"
+        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
+    </mp-cell>
+    <mp-cell link hover value="关于作者" data-field="author" bindtap="checkPermission">
+      <image slot="icon" src="../../images/mine_aboutauthor.png"
+        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
+    </mp-cell>
+    <mp-cell link hover value="系统设置" data-field="setting" bindtap="checkPermission">
+      <image slot="icon" src="../../images/mine_setting.png"
+        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
+    </mp-cell>
+
   </mp-cells>
 </view>
