--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -42,6 +42,9 @@
       <image slot="icon" src="../../images/mine_setting.png"
         style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
     </mp-cell>
-
+    <mp-cell link hover value="用户反馈" data-field="feedback" bindtap="checkPermission">
+      <image slot="icon" src="../../images/mine_feedback.png"
+        style="margin-right: 16px;vertical-align: middle;width:20px; height: 20px;"></image>
+    </mp-cell>
   </mp-cells>
 </view>
