--- a/pages/todo/index.wxss
+++ b/pages/todo/index.wxss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
 }
-.todo_type{
+.todo_type,.picker_status{
   height: 80rpx;
   padding: 0 15rpx;
 }
@@ -40,6 +40,7 @@
  width: 100%;
   color: gray;
   font-size: 26rpx;
+  margin-top: 15rpx;
 }
 .item_top{
   display: flex;
@@ -60,6 +61,14 @@
   color: black;
   font-size: 32rpx;
   margin-bottom: 5rpx;
+  overflow: hidden;    
+  text-overflow:ellipsis;    
+  white-space: nowrap;
+}
+.content{
+  overflow: hidden;    
+text-overflow:ellipsis;    
+white-space: nowrap;
 }
 .item_bottom{
   margin-top: 10rpx;
